infrastructure/bicep/iaas/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.39.26.7824",
      "templateHash": "11992590956771197502"
    }
  },
  "parameters": {
    "environment": {
      "type": "string",
      "defaultValue": "dev"
    },
    "applicationName": {
      "type": "string",
      "defaultValue": "jobsite"
    },
    "location": {
      "type": "string",
      "defaultValue": "swedencentral"
    },
    "frontendSubnetId": {
      "type": "string"
    },
    "dataSubnetId": {
      "type": "string"
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureadmin"
    },
    "adminPassword": {
      "type": "securestring",
      "defaultValue": "[newGuid()]"
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_D2ds_v6"
    },
    "sqlVmSize": {
      "type": "string",
      "defaultValue": "Standard_D4ds_v6"
    },
    "allowedRdpIps": {
      "type": "array",
      "defaultValue": []
    },
    "tags": {
      "type": "object",
      "defaultValue": {
        "Application": "JobSite",
        "Environment": "[parameters('environment')]",
        "ManagedBy": "Bicep"
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "iaas-resources-deployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "environment": {
            "value": "[parameters('environment')]"
          },
          "applicationName": {
            "value": "[parameters('applicationName')]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "frontendSubnetId": {
            "value": "[parameters('frontendSubnetId')]"
          },
          "dataSubnetId": {
            "value": "[parameters('dataSubnetId')]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "vmSize": {
            "value": "[parameters('vmSize')]"
          },
          "sqlVmSize": {
            "value": "[parameters('sqlVmSize')]"
          },
          "allowedRdpIps": {
            "value": "[parameters('allowedRdpIps')]"
          },
          "tags": {
            "value": "[parameters('tags')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.39.26.7824",
              "templateHash": "48152968387437781"
            }
          },
          "parameters": {
            "environment": {
              "type": "string"
            },
            "applicationName": {
              "type": "string"
            },
            "location": {
              "type": "string"
            },
            "frontendSubnetId": {
              "type": "string"
            },
            "dataSubnetId": {
              "type": "string"
            },
            "adminUsername": {
              "type": "string"
            },
            "vmSize": {
              "type": "string"
            },
            "sqlVmSize": {
              "type": "string"
            },
            "allowedRdpIps": {
              "type": "array",
              "defaultValue": []
            },
            "adminPassword": {
              "type": "securestring"
            },
            "tags": {
              "type": "object"
            }
          },
          "variables": {
            "uniqueSuffix": "[uniqueString(resourceGroup().id)]",
            "resourcePrefix": "[format('{0}-{1}', parameters('applicationName'), parameters('environment'))]",
            "wfeVmName": "[format('{0}-wfe-{1}', variables('resourcePrefix'), variables('uniqueSuffix'))]",
            "sqlVmName": "[format('{0}-sqlvm-{1}', variables('resourcePrefix'), variables('uniqueSuffix'))]",
            "nsgFrontendName": "[format('{0}-nsg-frontend', variables('resourcePrefix'))]",
            "nsgDataName": "[format('{0}-nsg-data', variables('resourcePrefix'))]"
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2023-11-01",
              "name": "[variables('nsgFrontendName')]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowHTTP",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "80",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowHTTPS",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowRDPFromAllowedIps",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "3389",
                      "sourceAddressPrefixes": "[parameters('allowedRdpIps')]",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 120,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowWinRMHTTP",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "5985",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 130,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowWinRMHTTPS",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "5986",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 140,
                      "direction": "Inbound"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2023-11-01",
              "name": "[variables('nsgDataName')]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowSQLFromWebVM",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "1433",
                      "sourceAddressPrefix": "10.50.0.0/24",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowSQLFromVirtualNetwork",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "1433",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 105,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowRDPFromAllowedIps",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "3389",
                      "sourceAddressPrefixes": "[parameters('allowedRdpIps')]",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowWinRMHTTP",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "5985",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 120,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "AllowWinRMHTTPS",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "5986",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 130,
                      "direction": "Inbound"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2023-11-01",
              "name": "[format('{0}-nic', variables('wfeVmName'))]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgFrontendName'))]"
                },
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "subnet": {
                        "id": "[parameters('frontendSubnetId')]"
                      },
                      "privateIPAllocationMethod": "Dynamic"
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgFrontendName'))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2023-07-01",
              "name": "[variables('wfeVmName')]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "hardwareProfile": {
                  "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                  "computerName": "[variables('wfeVmName')]",
                  "adminUsername": "[parameters('adminUsername')]",
                  "adminPassword": "[parameters('adminPassword')]",
                  "windowsConfiguration": {
                    "enableAutomaticUpdates": true,
                    "provisionVMAgent": true
                  }
                },
                "storageProfile": {
                  "imageReference": {
                    "publisher": "MicrosoftWindowsServer",
                    "offer": "WindowsServer",
                    "sku": "2022-datacenter-azure-edition",
                    "version": "latest"
                  },
                  "osDisk": {
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Premium_LRS"
                    }
                  }
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-nic', variables('wfeVmName')))]"
                    }
                  ]
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-nic', variables('wfeVmName')))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2023-11-01",
              "name": "[format('{0}-nic', variables('sqlVmName'))]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDataName'))]"
                },
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "subnet": {
                        "id": "[parameters('dataSubnetId')]"
                      },
                      "privateIPAllocationMethod": "Dynamic"
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDataName'))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2023-07-01",
              "name": "[variables('sqlVmName')]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "hardwareProfile": {
                  "vmSize": "[parameters('sqlVmSize')]"
                },
                "osProfile": {
                  "computerName": "[variables('sqlVmName')]",
                  "adminUsername": "[parameters('adminUsername')]",
                  "adminPassword": "[parameters('adminPassword')]",
                  "windowsConfiguration": {
                    "enableAutomaticUpdates": true,
                    "provisionVMAgent": true
                  }
                },
                "storageProfile": {
                  "imageReference": {
                    "publisher": "MicrosoftSQLServer",
                    "offer": "sql2022-ws2022",
                    "sku": "standard",
                    "version": "latest"
                  },
                  "osDisk": {
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Premium_LRS"
                    }
                  },
                  "dataDisks": [
                    {
                      "lun": 0,
                      "createOption": "Empty",
                      "diskSizeGB": 128,
                      "managedDisk": {
                        "storageAccountType": "Premium_LRS"
                      }
                    },
                    {
                      "lun": 1,
                      "createOption": "Empty",
                      "diskSizeGB": 128,
                      "managedDisk": {
                        "storageAccountType": "Premium_LRS"
                      }
                    }
                  ]
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-nic', variables('sqlVmName')))]"
                    }
                  ]
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-nic', variables('sqlVmName')))]"
              ]
            },
            {
              "type": "Microsoft.SqlVirtualMachine/sqlVirtualMachines",
              "apiVersion": "2023-10-01-preview",
              "name": "[format('{0}-sqlvm-config', variables('sqlVmName'))]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "virtualMachineResourceId": "[resourceId('Microsoft.Compute/virtualMachines', variables('sqlVmName'))]",
                "sqlManagement": "Full",
                "sqlServerLicenseType": "AHUB",
                "wsfcStaticIp": "",
                "autoBackupSettings": {
                  "enable": false
                },
                "serverConfigurationsManagementSettings": {
                  "sqlConnectivityUpdateSettings": {
                    "connectivityType": "Private",
                    "port": 1433
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', variables('sqlVmName'))]"
              ]
            }
          ],
          "outputs": {
            "wfeVmId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Compute/virtualMachines', variables('wfeVmName'))]"
            },
            "wfeVmName": {
              "type": "string",
              "value": "[variables('wfeVmName')]"
            },
            "wfeVmPrivateIp": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('{0}-nic', variables('wfeVmName'))), '2023-11-01').ipConfigurations[0].properties.privateIPAddress]"
            },
            "sqlVmId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Compute/virtualMachines', variables('sqlVmName'))]"
            },
            "sqlVmName": {
              "type": "string",
              "value": "[variables('sqlVmName')]"
            },
            "sqlVmPrivateIp": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('{0}-nic', variables('sqlVmName'))), '2023-11-01').ipConfigurations[0].properties.privateIPAddress]"
            }
          }
        }
      }
    }
  ],
  "outputs": {
    "wfeVmId": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'iaas-resources-deployment'), '2025-04-01').outputs.wfeVmId.value]"
    },
    "wfeVmName": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'iaas-resources-deployment'), '2025-04-01').outputs.wfeVmName.value]"
    },
    "wfeVmPrivateIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'iaas-resources-deployment'), '2025-04-01').outputs.wfeVmPrivateIp.value]"
    },
    "sqlVmId": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'iaas-resources-deployment'), '2025-04-01').outputs.sqlVmId.value]"
    },
    "sqlVmName": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'iaas-resources-deployment'), '2025-04-01').outputs.sqlVmName.value]"
    },
    "sqlVmPrivateIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'iaas-resources-deployment'), '2025-04-01').outputs.sqlVmPrivateIp.value]"
    }
  }
}
